# workshop

./: README.md  bb_reg.py  cnn.py  fcn_unet.py  pyproject.toml  pytorch.py  tensors.py
opencv/: icp.py
torch_basics/: backprop.py  datasets_transforms.py  pytorch.py  tensors.py
